--- a/muti_classification/all_muti.ipynb
+++ b/muti_classification/all_muti.ipynb
@@ -38,65 +38,13 @@
      "output_type": "stream",
      "text": [
       "Checking whether there is an H2O instance running at http://localhost:54321 . connected.\n",
-      "Warning: Your H2O cluster version is too old (7 months and 11 days)!Please download and install the latest version from http://h2o.ai/download/\n"
+      "Warning: Your H2O cluster version is too old (7 months and 12 days)!Please download and install the latest version from http://h2o.ai/download/\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O_cluster_uptime:</td>\n",
-       "<td>43 days 15 hours 53 mins</td></tr>\n",
-       "<tr><td>H2O_cluster_timezone:</td>\n",
-       "<td>Asia/Shanghai</td></tr>\n",
-       "<tr><td>H2O_data_parsing_timezone:</td>\n",
-       "<td>UTC</td></tr>\n",
-       "<tr><td>H2O_cluster_version:</td>\n",
-       "<td>3.34.0.3</td></tr>\n",
-       "<tr><td>H2O_cluster_version_age:</td>\n",
-       "<td>7 months and 11 days !!!</td></tr>\n",
-       "<tr><td>H2O_cluster_name:</td>\n",
-       "<td>root</td></tr>\n",
-       "<tr><td>H2O_cluster_total_nodes:</td>\n",
-       "<td>1</td></tr>\n",
-       "<tr><td>H2O_cluster_free_memory:</td>\n",
-       "<td>18.53 Gb</td></tr>\n",
-       "<tr><td>H2O_cluster_total_cores:</td>\n",
-       "<td>20</td></tr>\n",
-       "<tr><td>H2O_cluster_allowed_cores:</td>\n",
-       "<td>20</td></tr>\n",
-       "<tr><td>H2O_cluster_status:</td>\n",
-       "<td>locked, healthy</td></tr>\n",
-       "<tr><td>H2O_connection_url:</td>\n",
-       "<td>http://localhost:54321</td></tr>\n",
-       "<tr><td>H2O_connection_proxy:</td>\n",
-       "<td>{\"http\": null, \"https\": null}</td></tr>\n",
-       "<tr><td>H2O_internal_security:</td>\n",
-       "<td>False</td></tr>\n",
-       "<tr><td>H2O_API_Extensions:</td>\n",
-       "<td>Amazon S3, XGBoost, Algos, AutoML, Core V3, TargetEncoder, Core V4</td></tr>\n",
-       "<tr><td>Python_version:</td>\n",
-       "<td>3.8.10 final</td></tr></table></div>"
-      ],
-      "text/plain": [
-       "--------------------------  ------------------------------------------------------------------\n",
-       "H2O_cluster_uptime:         43 days 15 hours 53 mins\n",
-       "H2O_cluster_timezone:       Asia/Shanghai\n",
-       "H2O_data_parsing_timezone:  UTC\n",
-       "H2O_cluster_version:        3.34.0.3\n",
-       "H2O_cluster_version_age:    7 months and 11 days !!!\n",
-       "H2O_cluster_name:           root\n",
-       "H2O_cluster_total_nodes:    1\n",
-       "H2O_cluster_free_memory:    18.53 Gb\n",
-       "H2O_cluster_total_cores:    20\n",
-       "H2O_cluster_allowed_cores:  20\n",
-       "H2O_cluster_status:         locked, healthy\n",
-       "H2O_connection_url:         http://localhost:54321\n",
-       "H2O_connection_proxy:       {\"http\": null, \"https\": null}\n",
-       "H2O_internal_security:      False\n",
-       "H2O_API_Extensions:         Amazon S3, XGBoost, Algos, AutoML, Core V3, TargetEncoder, Core V4\n",
-       "Python_version:             3.8.10 final\n",
-       "--------------------------  ------------------------------------------------------------------"
-      ]
+      "text/plain": "--------------------------  ------------------------------------------------------------------\nH2O_cluster_uptime:         44 days 16 hours 14 mins\nH2O_cluster_timezone:       Asia/Shanghai\nH2O_data_parsing_timezone:  UTC\nH2O_cluster_version:        3.34.0.3\nH2O_cluster_version_age:    7 months and 12 days !!!\nH2O_cluster_name:           root\nH2O_cluster_total_nodes:    1\nH2O_cluster_free_memory:    18.29 Gb\nH2O_cluster_total_cores:    20\nH2O_cluster_allowed_cores:  20\nH2O_cluster_status:         locked, healthy\nH2O_connection_url:         http://localhost:54321\nH2O_connection_proxy:       {\"http\": null, \"https\": null}\nH2O_internal_security:      False\nH2O_API_Extensions:         Amazon S3, XGBoost, Algos, AutoML, Core V3, TargetEncoder, Core V4\nPython_version:             3.8.10 final\n--------------------------  ------------------------------------------------------------------",
+      "text/html": "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O_cluster_uptime:</td>\n<td>44 days 16 hours 14 mins</td></tr>\n<tr><td>H2O_cluster_timezone:</td>\n<td>Asia/Shanghai</td></tr>\n<tr><td>H2O_data_parsing_timezone:</td>\n<td>UTC</td></tr>\n<tr><td>H2O_cluster_version:</td>\n<td>3.34.0.3</td></tr>\n<tr><td>H2O_cluster_version_age:</td>\n<td>7 months and 12 days !!!</td></tr>\n<tr><td>H2O_cluster_name:</td>\n<td>root</td></tr>\n<tr><td>H2O_cluster_total_nodes:</td>\n<td>1</td></tr>\n<tr><td>H2O_cluster_free_memory:</td>\n<td>18.29 Gb</td></tr>\n<tr><td>H2O_cluster_total_cores:</td>\n<td>20</td></tr>\n<tr><td>H2O_cluster_allowed_cores:</td>\n<td>20</td></tr>\n<tr><td>H2O_cluster_status:</td>\n<td>locked, healthy</td></tr>\n<tr><td>H2O_connection_url:</td>\n<td>http://localhost:54321</td></tr>\n<tr><td>H2O_connection_proxy:</td>\n<td>{\"http\": null, \"https\": null}</td></tr>\n<tr><td>H2O_internal_security:</td>\n<td>False</td></tr>\n<tr><td>H2O_API_Extensions:</td>\n<td>Amazon S3, XGBoost, Algos, AutoML, Core V3, TargetEncoder, Core V4</td></tr>\n<tr><td>Python_version:</td>\n<td>3.8.10 final</td></tr></table></div>"
      },
      "metadata": {},
      "output_type": "display_data"
